# mandos

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  mandos_development.session.sql
.cargo/: config.toml
migrations/: 0001_users_auth.sql
proto/: mandos_auth.proto
src/: config.rs  error.rs  lib.rs  main.rs  mandos_auth.rs  server.rs  tracing.rs
src/model/: iterable.rs  mod.rs  user_auth.rs
src/model/db/: crud.rs  mod.rs
src/model/session/: crud.rs  mod.rs
src/model/user_auth/: mod.rs  model_controller.rs
src/server/: middleware.rs  mod.rs
src/server/routes/: auth.rs
src/utils/: mod.rs
src/utils_tests/: mod.rs
tests/: delete_account.rs  health_check.rs  login.rs  logout.rs  register.rs  test_utils.rs  tests_utils.rs  update_password.rs  validate_session.rs
