[package]
name = "mandos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
# Tokio dependencies
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14", features = ["net"] }

# gRPC dependencies
tonic = "0.10.0"
tonic-reflection = "0.10.0"
prost = "0.12.0"
futures = "0.3.28" # For streams if they are needed in the future

# Serde
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
serde_with = "3.3.0"

# Tracing
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}

# Other dependencies
uuid ={ version = "1.4.1", features = ["serde", "v4", "fast-rng"] }
strum_macros = "0.25.2"
dotenv = "0.15.0"

[build-dependencies]
tonic-build = "0.10.0"