[package]
name = "mandos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mandos"
path = "src/main.rs"

[dependencies]
# Tokio dependencies
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14", features = ["net"] }

# gRPC dependencies
tonic = "0.10.0"
tonic-reflection = "0.10.0"
prost = "0.12.0"

# Sqlx dependencies
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Redis dependencies
deadpool-redis = { version = "0.12.0", features = ["serde"] }
redis = { version = "0.23.3", default-features = false}

# Serde
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
serde_with = "3.3.0"

# Tracing
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}

# Other dependencies
uuid ={ version = "1.4.1", features = ["serde", "v4", "fast-rng"] }
strum_macros = "0.25.2"
dotenvy = "0.15.7"
argon2 = "0.5.1"
chrono = { version = "0.4.26", features = ["serde"] }

[build-dependencies]
tonic-build = "0.10.0"